--- a/wiki/AbeMvapich2.wiki
+++ b/wiki/AbeMvapich2.wiki
@@ -2,7 +2,7 @@
 
 ||[Welcome Home]||[CMakeExplained cmake howto]||
 
-Check [CMakeToolChain] for the descriptions of the toolchain
+Check [CMakeToolchain] for the descriptions of the toolchain
 file and `cmake` variables.
 
 = {{{config/AbeMvapich2.cmake}}} =
