--- a/wiki/JaguarGNU.wiki
+++ b/wiki/JaguarGNU.wiki
@@ -20,7 +20,7 @@ SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS FALSE)
 #--------------------------------------------------------------------------
 set(CMAKE_C_COMPILER  /opt/cray/xt-asyncpe/3.0/bin/cc)
 set(CMAKE_CXX_COMPILER  /opt/cray/xt-asyncpe/3.0/bin/CC)
-set(GNU_FLAGS "-fopenmp -O3 -ftemplate-depth-60 -Drestrict=__restrict__ -finline-limit=1000 -fstrict-aliasing -funroll-all-loops -Wno-deprecated ")
+set(GNU_FLAGS "-fopenmp -O3 -ftemplate-depth-60 -Drestrict=__restrict__ -finline-limit=1000 -fstrict-aliasing -funroll-all-loops -Wno-deprecated -fomit-frame-pointer ")
 set(XT_FLAGS "-march=amdfam10 -msse3 -D_CRAYMPI")
 set(CMAKE_CXX_FLAGS "${XT_FLAGS} ${GNU_FLAGS} -ftemplate-depth-60")
 set(CMAKE_C_FLAGS "${XT_FLAGS} ${GNU_FLAGS}")
