Add a toolchain for genric mpi/intel.
git-svn-id: http://qmcpack.googlecode.com/svn@4116 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/CMakeToolchain.wiki
+++ b/wiki/CMakeToolchain.wiki
@@ -72,4 +72,5 @@ compliations.
  * KrakenGNU.cmake 
 
 = Clusters using INTEL compilers =
+ * [LinuxIntelCMake LinuxIntel.cmake]
  * [AbeMvapich2 AbeMvapich2.cmake]
