--- a/wiki/LinuxIntelCMake.wiki
+++ b/wiki/LinuxIntelCMake.wiki
@@ -10,14 +10,14 @@ a prototype toolchain file for a build using Intel compilers on LINUX clusters.
 
 {{{
 #--------------------------------------------------------------------------
-# setting compilers, compiler options and MKL_HOME
+# setting compilers, compiler options
 #--------------------------------------------------------------------------
 set(CMAKE_CXX_COMPILER mpicxx)
 set(CMAKE_C_COMPILER  icc)
+set(GNU_OPTS "-DADD_ -DINLINE_ALL=inline")
 set(INTEL_OPTS "-g  -restrict -unroll  -O3 -ip -xT -openmp -Wno-deprecated")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INTEL_OPTS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${INTEL_OPTS} ${GNU_OPTS}")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${INTEL_OPTS} -std=c99")
-set(MKL_HOME "/opt/intel/mkl/10.0.3.020" CACHE STRING "MKL HOME")
 
 #--------------------------------------------------------------------------
 # path where the libraries are located
@@ -32,7 +32,6 @@ set(CMAKE_FIND_ROOT_PATH
 #--------------------------------------------------------------------------
 # below is common for INTEL compilers and MKL library
 #--------------------------------------------------------------------------
-ADD_DEFINITIONS(-DADD_ -DINLINE_ALL=inline)
 set(ENABLE_OPENMP 1)
 set(HAVE_MPI 1)
 set(HAVE_SSE 1)
@@ -44,6 +43,10 @@ set(PREFETCH_AHEAD 10)
 set(HAVE_MKL 1)
 set(HAVE_MKL_VML 1)
 
+#--------------------------------------------------------------------------
+#set MKL_HOME: toolchain file should take care of proper links to blas/lapack 
+#--------------------------------------------------------------------------
+set(MKL_HOME "/opt/intel/mkl/10.0.3.020" CACHE STRING "MKL HOME")
 include_directories(${MKL_HOME}/include)
 set(LAPACK_LIBRARY -L${MKL_HOME}/lib/em64t -lmkl_lapack)
 set(BLAS_LIBRARY -L${MKL_HOME}/lib/em64t -lmkl -lguide)
