git-svn-id: http://qmcpack.googlecode.com/svn@4145 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/CMakeToolchain.wiki
+++ b/wiki/CMakeToolchain.wiki
@@ -69,7 +69,7 @@ compliations.
 
 = Clusters using GNU compilers =
  * [JaguarGNU JaguarGNU.cmake]
- * KrakenGNU.cmake 
+ * [KrakenGNU KrakenGNU.cmake]
 
 = Clusters using INTEL compilers =
  * [LinuxIntelCMake LinuxIntel.cmake]
