--- a/wiki/KrakenGUI.wiki
+++ b/wiki/KrakenGUI.wiki
@@ -1,47 +1,43 @@
-﻿#summary Toolchain file for jaguar at ORNL
+﻿#summary Toolchain file for Kraken at NICS
 
 ||[Welcome Home]||[CMakeExplained cmake howto]||
 
-Check [CMakeToolchain] for the descriptions of the toolchain
-file and `cmake` variables.
+Check [CMakeToolchain] for the descriptions of the toolchain file and `cmake` variables.
 
-= {{{config/JaguarGNU.cmake}}} =
+= {{{config/KrakenGNU.cmake}}} =
 a prototype toolchain file for a build using GNU compilers on LINUX clusters. 
+
+After `cmake` stage, edit CMakeCache.txt file to replace any dynamic libraries (*.so) 
+with static libraries, e.g.,
+{{{
+//Path to a library.
+FFTW_LIBRARY:FILEPATH=/opt/fftw/3.2.1/lib/libfftw3.a
+}}}
 
 {{{
 --------------------------------------------------------------------------
-# tool chain for abe Wed Aug 12 2009
+# tool chain for kraken Wed Aug 31 2009
 #--------------------------------------------------------------------------
 SET(CMAKE_SYSTEM_PROCESSOR "XT5")
 SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS FALSE)
 
-#--------------------------------------------------------------------------
-# setting compilers, compiler options and MKL_HOME
-#--------------------------------------------------------------------------
 set(CMAKE_C_COMPILER  /opt/cray/xt-asyncpe/3.0/bin/cc)
 set(CMAKE_CXX_COMPILER  /opt/cray/xt-asyncpe/3.0/bin/CC)
 set(GNU_OPTS "-DADD_ -DINLINE_ALL=inline")
-set(GNU_FLAGS "-fopenmp -O3 -ftemplate-depth-60 -Drestrict=__restrict__ -finline-limit=1000 -fstrict-aliasing -funroll-all-loops -Wno-deprecated -fomit-frame-pointer ")
+set(GNU_FLAGS "-fopenmp -O3 -ftemplate-depth-60 -Drestrict=__restrict__  -finline-limit=1000 -fstrict-aliasing -funroll-all-loops -Wno-deprecated ")
 set(XT_FLAGS "-march=amdfam10 -msse3 -D_CRAYMPI")
 set(CMAKE_CXX_FLAGS "${XT_FLAGS} ${GNU_FLAGS} -ftemplate-depth-60 ${GNU_OPTS}")
 set(CMAKE_C_FLAGS "${XT_FLAGS} ${GNU_FLAGS}")
 
-#--------------------------------------------------------------------------
-# path where the libraries are located
-# boost,hdf,szip,libxml2,fftw,essl
-#--------------------------------------------------------------------------
 set(CMAKE_FIND_ROOT_PATH
-      /opt/acml/4.1.0/gfortran64
-      /sw/xt5/hdf5/1.6.8/cnl2.1_gnu4.2.4
-      /sw/xt5/szip/2.1/sles10.1_gnu4.2.4
-      /sw/xt5/fftw/3.2/cnl2.1_gnu4.2.0
-      /ccs/proj/mat001/xt5/gnu2.1.4/einspline
-      /ccs/proj/mat001/cnl/boost
+      /opt/acml/4.2.0/gfortran64
+      /opt/fftw/3.2.1
+      /sw/xt/hdf5/1.8.3/cnl2.2_gnu4.3.2
+      /sw/xt/szip/2.1/sles10.1_gnu4.3.2
+      /nics/a/proj/qmc/boost_1_38_0
+      /nics/a/proj/qmc
      )
 
-#--------------------------------------------------------------------------
-# below is common for GNU compilers with ACML library
-#--------------------------------------------------------------------------
 SET(ENABLE_OPENMP 1)
 SET(HAVE_MPI 1)
 SET(HAVE_SSE 1)
@@ -50,11 +46,6 @@ SET(HAVE_SSE3 1)
 SET(HAVE_SSSE3 1)
 SET(USE_PREFETCH 1)
 SET(PREFETCH_AHEAD 12)
-
-
-#--------------------------------------------------------------------------
-#link ACML library
-#--------------------------------------------------------------------------
 SET(BLAS_LIBRARY -lacml)
 SET(LAPACK_LIBRARY -lacml_mv)
 
@@ -82,5 +73,4 @@ SET(CMAKE_CXX_LINK_SHARED_LIBRARY)
 SET(CMAKE_CXX_LINK_MODULE_LIBRARY)
 SET(CMAKE_C_LINK_SHARED_LIBRARY)
 SET(CMAKE_C_LINK_MODULE_LIBRARY)
-
 }}}
