Add a new item.
git-svn-id: http://qmcpack.googlecode.com/svn@4187 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/SHEGSample.wiki
+++ b/wiki/SHEGSample.wiki
@@ -42,6 +42,12 @@ Spherical Homegeneous Electron Gas (SHEG)
 </simulation>
 }}}
 
+=== Control parameters for eigensolver ==
+ * mix_ratio : a simple charge mixing scheme.
+ {{{
+ rho_new = mix_ratio*rho_old + (1-mix_ratio)*rho_old
+ }}}
+
 == jellium.qmc.xml ==
 {{{
 <?xml version="1.0"?>
