Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4248 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/SettingSamples.wiki
+++ b/wiki/SettingSamples.wiki
@@ -47,6 +47,10 @@ Another way to set this is,
 = Other useful parameters =
 Some other things you might find useful to put in your VMC and DMC blocks.
 == VMC ==
+{{{
+<parameter name="useDrift">yes</parameter>
+}}}
+ * useDrift = turn drift on or off in your VMC run.
 == DMC ==
 {{{
 <parameter name="MaxAge"> 2 </parameter>
