Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4375 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/GPU.wiki
+++ b/wiki/GPU.wiki
@@ -1,6 +1,4 @@
-#summary Version which runs on NVIDIA GPUs
+#summary Version of QMCPACK which runs on NVIDIA GPUs
 
 = Introduction =
-[GPUposter.png]
-
-
+[http://qmcpack.googlecode.com/files/GPUposter_landscape.pdf Poster describing GPU version of QMCPACK]
