--- a/wiki/GPU.wiki
+++ b/wiki/GPU.wiki
@@ -1,4 +1,11 @@
 #summary Version of QMCPACK which runs on NVIDIA GPUs
 
 = Introduction =
-[http://qmcpack.googlecode.com/files/GPUposter_landscape.pdf Poster describing GPU version of QMCPACK]
+The loosely-coupled population of walkers in QMC simulations make a nearly ideal case for acceleration on GPUs.  We have developed a partial port of QMCPACK to run on NVIDIA GPUs using CUDA.  For large systems, the code runs up to 15 times faster on a G200 GPU than on a quad-core Xeon processors.
+
+Currently, the source exists as a branch from the mainline code, but we hope to merge it back in soon.  In the meantime, it may be check out with:
+
+svn co https://qmcpack.googlecode.com/svn/branches/cuda-20080919 qmcpack-gpu
+
+A poster on the GPU port was presented at Supercomputing 09:
+[http://qmcpack.googlecode.com/files/GPUposter_landscape.pdf SC09 poster]
