Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4380 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/Optimization.wiki
+++ b/wiki/Optimization.wiki
@@ -18,6 +18,7 @@ This is a slight variant on the Energy Minimization method of Umrigar et al. It 
 <cost name="reweightedvariance"> 0.05 </cost>
 <parameter name="max_its">2</parameter>
 <parameter name="exp0"> -8 </parameter>
+</qmc>
 }}}
 
 ==Optimization algorithm==
