--- a/wiki/CMakeExplained.wiki
+++ b/wiki/CMakeExplained.wiki
@@ -97,6 +97,22 @@ CMakeLists.txt can be edited before `cmake` step.
  * single-precision has not been debugged (probably compilers will give up).
  * There is NO NEED to use long for OHMMS_INDEXTYPE
 
+Several variables can be overwritten at `cmake` step by passing arguments to `cmake`. For example To disable MPI,
+{{{
+cmake -DQMC_MPI=0 ..
+}}}
+
+||*varaible*||*type*||*default*||*comment*||
+||QMC_BUILD_LEVEL||int||1||QMC Build Level: 1=bare, 2=developer, 3=experimental||
+||OHMMS_DIM||int||3||physical dimension of the build||
+||QMC_MPI||bool||1||Eanble/disable MPI||
+||QMC_OMP||bool||1||Eanble/disable OpenMP||
+||QMC_COMPLEX||bool||0||Eanble/disable complex build||
+||BUILD_QMCTOOLS||bool||0|| Build tools for QMCPACK||
+||BUILD_SANDBOX||bool||0|| Build sandbox for testing for the developers||
+||ENABLE_PHDF5||bool||0|| Enable use of phdf5 ||
+||ENABLE_TAU_PROFILE||bool||0||Enable tau for profiling||
+
 During `cmake` step, CMakeCache.txt file is created in the `build` directory.
 As the name implies, it contains cached variables that are used during the
 build stage. This file can be edited to modify the build properties. 
