Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4410 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/ppconvert.wiki
+++ b/wiki/ppconvert.wiki
@@ -39,7 +39,7 @@ qmcpack (xml) tm, hdf5, upf, fhi, fpmd, casino
  -d_ref similar to s but for d states
 
 == options ==
-* log_grid. This should always be included for qmcpack PPs (may be default).
+ log_grid. This should always be included for qmcpack PPs (may be default).
 
 == Example ==
 for sodium PP from Trail Needs tabulated to qmcpack and pwscf
