Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4411 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/Optimization.wiki
+++ b/wiki/Optimization.wiki
@@ -1,4 +1,5 @@
 #summary Sample block for the energy minimization algorithm in qmcpack.
+||[Welcome Home]||[TutorialsList tutorials]||
 
 = Optimization =
 
