--- a/wiki/TutorialsList.wiki
+++ b/wiki/TutorialsList.wiki
@@ -7,6 +7,9 @@
  * [HEG3DSample 3D Homogeneous Electron Gas]
  * [BulkSolidDFTSample Bulk Solid with DFT oritals]
 
+= How To guides =
+ * [Optimization Sample Optimization Block]
+
 = Adding a tutorial or a sample run =
 
 Prepare a wiki page starting with
