Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4413 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -11,6 +11,7 @@
   * [BulkSolidDFTSample Bulk Solid]
   * [SHEGSample SHEG]
   * [HEG3DSample 3DHEG]
+ * [HowToGuide How To Guides]
  * [DevHandbook For developers]
   * [ClassOverview Class Overview]
   * [IntroXml QMC-XML]
