Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4417 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -12,6 +12,11 @@
   * [SHEGSample SHEG]
   * [HEG3DSample 3DHEG]
  * [HowToGuide How To Guides]
+  * [Optimization Optimization]
+  * [ppconvert Converting Pseudopotentials]
+  * [SymmetryOperations Symmetrizing single particle orbitals]
+  * [SettingSamples Setting samples]
+
  * [DevHandbook For developers]
   * [ClassOverview Class Overview]
   * [IntroXml QMC-XML]
