Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4418 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -16,7 +16,7 @@
   * [ppconvert Converting Pseudopotentials]
   * [SymmetryOperations Symmetrizing single particle orbitals]
   * [SettingSamples Setting samples]
-
+  * [QuantumEspressoConverter PWSCF converter]
  * [DevHandbook For developers]
   * [ClassOverview Class Overview]
   * [IntroXml QMC-XML]
