Edited wiki page through web user interface.
git-svn-id: http://qmcpack.googlecode.com/svn@4421 4bc5593c-822e-11de-b41d-d982dfe7be50

--- a/wiki/ppconvert.wiki
+++ b/wiki/ppconvert.wiki
@@ -3,6 +3,7 @@
 = Ken Esler's ppconvert =
 
 Ken has been kind enough to develop a tool for the conversion of pseudopotentials.
+Also see [BulkSolidDFTSample BulkSolidDFTSample Tutorial]
 
 == output from help ==
 {{{
